my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/WDEPRECATED_scope/WDEPRECATED_scope.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_WDEPRECATED_scope.dml:16:1: In input
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_WDEPRECATED_scope.dml:18:5: warning WDEPRECATED: deprecation: Variable j in top-level method scope shadows parameter
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_WDEPRECATED_scope.dml:9:1: In output
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_WDEPRECATED_scope.dml:11:5: warning WDEPRECATED: deprecation: Variable i in top-level method scope shadows parameter
